--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,7 +36,9 @@ jobs:
             gradle-
 
       - name: Decode a Base64 signingInMemoryKey
-        run: echo "${{ secrets.MAVEN_BASE64 }}" | base64 --decode >> gradle.properties
+        run: |
+          mkdir -p ~/.gradle
+          echo "${{ secrets.MAVEN_BASE64 }}" | base64 --decode >> ~/.gradle/gradle.properties
 
       - name: Run Gradle Publish to Maven Local
         run: ./gradlew publishToMavenLocal
